<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text_heading_alc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/oleo_script_swash_caps"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#110F0F"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#FFEB3B"
        android:fontFamily="@font/gabriela"
        android:paddingLeft="12sp"
        android:paddingTop="5sp"
        android:paddingRight="12sp"
        android:paddingBottom="5sp"
        android:text="@string/about_alc"
        android:textAlignment="center"
        android:textColor="#0C0B0B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_heading_alc"
        app:layout_constraintStart_toStartOf="@+id/text_heading_alc"
        app:layout_constraintTop_toBottomOf="@+id/text_heading_alc" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#FFEB3B"
        android:fontFamily="@font/gabriela"
        android:paddingLeft="12sp"
        android:paddingTop="5sp"
        android:paddingRight="12sp"
        android:paddingBottom="5sp"
        android:text="@string/my_profile"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_alc"
        app:layout_constraintStart_toStartOf="@+id/btn_alc"
        app:layout_constraintTop_toBottomOf="@+id/btn_alc" />
</androidx.constraintlayout.widget.ConstraintLayout>